--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^5.2.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^8.0.1",
     "npm": "^11.8.0",
     "tar": "^7.5.7"
   },
@@ -35,6 +36,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.2.0",
+    "@types/nodemailer": "^7.0.9",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.8.1",
